--- a/source/index.html
+++ b/source/index.html
@@ -19,7 +19,27 @@
     <div class="wrapper">
       <div class="container">
         <h1 class="visually-hidden">DJStore</h1>
-        <header class="header"></header>
+        <header class="header">
+          <div class="wrapper header__wrapper">
+            <div class="header__logo">
+              <img src="img/logo.svg" width="154" height="32" alt="Logo">
+              <div class="burger header__burger">
+                <div></div>
+              </div>
+            </div>
+            <nav class="navigation header__navigation">
+              <ul class="list">
+                <li>
+                  <a href="#">
+                    <svg width="24" height="24" viewBox="0 0 24 24">
+                      <use xlink:href="img/sprite.svg#icon-home"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </header>
         <main class="main"></main>
       </div>
     </div>
