Добавляет разметку навигации

--- a/source/index.html
+++ b/source/index.html
@@ -34,6 +34,47 @@
                     <svg width="24" height="24" viewBox="0 0 24 24">
                       <use xlink:href="img/sprite.svg#icon-home"></use>
                     </svg>
+                    <span>Главная</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <svg width="24" height="24" viewBox="0 0 24 24">
+                      <use xlink:href="img/sprite.svg#icon-projects"></use>
+                    </svg>
+                    <span>Проекты</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <svg width="24" height="24" viewBox="0 0 24 24">
+                      <use xlink:href="img/sprite.svg#icon-lamp"></use>
+                    </svg>
+                    <span>Услуги</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <svg width="24" height="24" viewBox="0 0 24 24">
+                      <use xlink:href="img/sprite.svg#icon-rounds" fill='none'></use>
+                    </svg>
+                    <span>О Компании</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <svg width="24" height="24" viewBox="0 0 24 24">
+                      <use xlink:href="img/sprite.svg#icon-layers"></use>
+                    </svg>
+                    <span>Готовые решения</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <svg width="24" height="24" viewBox="0 0 24 24">
+                      <use xlink:href="img/sprite.svg#icon-pin" fill='none'></use>
+                    </svg>
+                    <span>Контакты</span>
                   </a>
                 </li>
               </ul>
