Завершает разметку навигации

--- a/source/index.html
+++ b/source/index.html
@@ -77,6 +77,31 @@
                     <span>Контакты</span>
                   </a>
                 </li>
+                <li>
+                  <button class="button">Заполнить бриф</button>
+                </li>
+                <li>
+                  <a href="mailto:info@sld-store.ru">
+                    <svg width="24" height="24" viewBox="0 0 24 24">
+                      <use xlink:href="img/sprite.svg#icon-mail" fill='none'></use>
+                    </svg>
+                    <span>
+                      <span>Напишите нам</span>
+                      <b>info@sld-store.ru</b>
+                    </span>
+                  </a>
+                </li>
+                <li>
+                  <a href="tel:88126156279">
+                    <svg width="24" height="24" viewBox="0 0 24 24">
+                      <use xlink:href="img/sprite.svg#icon-phone" fill='none'></use>
+                    </svg>
+                    <span>
+                      <span>Обратный звонок</span>
+                      <b>8 812 615-62-79</b>
+                    </span>
+                  </a>
+                </li>
               </ul>
             </nav>
           </div>
