--- a/source/index.html
+++ b/source/index.html
@@ -15,7 +15,7 @@
   <title>DJStore</title>
 </head>
   <body class="body">
-    <div class="wrapper">
+    <div class="container">
       <h1 class="visually-hidden">DJStore</h1>
       <header class="header">
         <div class="wrapper header__wrapper">
@@ -28,7 +28,7 @@
           <nav class="navigation header__navigation">
             <ul class="list">
               <li>
-                <a href="#">
+                <a class="active" href="#">
                   <svg width="24" height="24" viewBox="0 0 24 24">
                     <use xlink:href="img/sprite.svg#icon-home"></use>
                   </svg>
