--- a/source/index.html
+++ b/source/index.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="Description" content="Тестовое задание DJStore">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="preload" href="fonts/MontserratMedium.woff" as="font" type="font/woff2" crossorigin="anonymous">
-  <link rel="preload" href="fonts/MontserratRegular.woff" as="font" type="font/woff2" crossorigin="anonymous">
-  <link rel="preload" href="fonts/MontserratSemiBold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+  <link href="fonts/MontserratMedium.woff" as="font" type="font/woff2" crossorigin="anonymous">
+  <link href="fonts/MontserratRegular.woff" as="font" type="font/woff2" crossorigin="anonymous">
+  <link href="fonts/MontserratSemiBold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.min.css">
   <script>
     document.createElement( "picture" );
@@ -74,7 +74,7 @@
               <li>
                 <a href="#">
                   <svg fill="none" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                    <clipPath id="a">
+                    <clipPath id="b">
                       <path d="m0 0h24v24h-24z"/>
                     </clipPath>
                     <g clip-path="url(#a)">
@@ -95,7 +95,9 @@
                   <span>Контакты</span>
                 </a>
               </li>
-              <button class="button">Заполнить бриф</button>
+              <li class="navigation__button">
+                <button class="button">Заполнить бриф</button>
+              </li>
               <li class="navigation__mail">
                 <a href="mailto:info@sld-store.ru">
                   <svg width="24" height="24" viewBox="0 0 24 24">
