--- a/source/index.html
+++ b/source/index.html
@@ -140,9 +140,9 @@
               </div>
             </div>
           </div>
-          <div class="slider top__slider">
-            <ul class="list">
-              <li>
+          <div class="slider top__slider swiper-container">
+            <ul class="list swiper-wrapper">
+              <li class="swiper-slide">
                 <picture>
                   <source type="image/webp" media="(min-width: 1200px)" srcset="img/slide-1@1x.webp 1x, img/slide-1@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)" srcset="img/slide-1-tab@1x.webp 1x, img/slide-1-tab@2x.webp 2x">
@@ -152,7 +152,28 @@
                   <img src="img/slide-1-mob@1x.jpg" srcset="img/slide-1-mob@2x.jpg 2x" alt="Первый слайд">
                 </picture>
               </li>
-              <li>
+              <li class="swiper-slide">
+                <picture>
+                  <source type="image/webp" media="(min-width: 1200px)" srcset="img/slide-2@1x.webp 1x, img/slide-2@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/slide-2-tab@1x.webp 1x, img/slide-2-tab@2x.webp 2x">
+                  <source type="image/webp" srcset="img/slide-2-mob@1x.webp 1x, img/slide-2-mob@2x.webp 2x">
+                  
+                  <source media="(min-width: 1200px)" srcset="img/slide-2@1x.jpg 1x, img/slide-2@2x.jpg 2x">
+                  <source media="(min-width: 768px)" srcset="img/slide-2-tab@1x.jpg 1x, img/slide-2-tab@2x.jpg 2x">
+                  <img src="img/slide-2-mob@1x.jpg" srcset="img/slide-2-mob@2x.jpg 2x" alt="Первый слайд">
+                </picture>
+              </li>
+              <li class="swiper-slide">
+                <picture>
+                  <source type="image/webp" media="(min-width: 1200px)" srcset="img/slide-1@1x.webp 1x, img/slide-1@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/slide-1-tab@1x.webp 1x, img/slide-1-tab@2x.webp 2x">
+                  <source type="image/webp" srcset="img/slide-1-mob@1x.webp 1x, img/slide-1-mob@2x.webp 2x">
+                  <source media="(min-width: 1200px)" srcset="img/slide-1@1x.jpg 1x, img/slide-1@2x.jpg 2x">
+                  <source media="(min-width: 768px)" srcset="img/slide-1-tab@1x.jpg 1x, img/slide-1-tab@2x.jpg 2x">
+                  <img src="img/slide-1-mob@1x.jpg" srcset="img/slide-1-mob@2x.jpg 2x" alt="Первый слайд">
+                </picture>
+              </li>
+              <li class="swiper-slide">
                 <picture>
                   <source type="image/webp" media="(min-width: 1200px)" srcset="img/slide-2@1x.webp 1x, img/slide-2@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)" srcset="img/slide-2-tab@1x.webp 1x, img/slide-2-tab@2x.webp 2x">
@@ -165,27 +186,43 @@
               </li>
             </ul>
           </div>
-          <div class="small-slider top__small-slider">
-            <ul class="list">
-              <li>
+          <div class="small-slider top__small-slider swiper-container-1">
+            <ul class="list swiper-wrapper">
+              <li class="swiper-slide">
                 <b>01</b>
                 <p>
                   Простота использования оснащения позволяет решать функциональные и организационные задачи, 
                   оптимизировать работу, проводить мероприятия различного масштаба.
                 </p>
               </li>
-              <li>
+              <li class="swiper-slide">
                 <b>02</b>
                 <p>
                   Применение инновационных решений для демонстрации культурных и исторических реликвий – 
                   актуальная тенденция, которая успешно применяется в музеях и на площадках альтернативного искусства.
                 </p>
               </li>
+              <li class="swiper-slide">
+                <b>03</b>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                  Sequi minima consequuntur qui odio aut velit earum suscipit tenetur dolor itaque, 
+                  iusto eius quidem inventore corrupti?
+                </p>
+              </li>
+              <li class="swiper-slide">
+                <b>04</b>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                  Sequi minima consequuntur qui odio aut velit earum suscipit tenetur dolor itaque, 
+                  iusto eius quidem inventore corrupti?
+                </p>
+              </li>
             </ul>
           </div>
           <div class="slider-buttons top__slider-buttons">
-            <button><span class="visually-hidden">Предыдущий слайд</span></button>
-            <button><span class="visually-hidden">Следующий слайд</span></button>
+            <button class="swiper-button-prev"><span class="visually-hidden">Предыдущий слайд</span></button>
+            <button class="swiper-button-next"><span class="visually-hidden">Следующий слайд</span></button>
           </div>
         </section>
         <section class="positions">
